[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UIScenes/Assets/Fonts/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UIScenes/Assets/Buttons/blue_button03.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UIScenes/Assets/Buttons/blue_button05.png" type="Texture" id=3]
[ext_resource path="res://Scenes/UIScenes/Assets/Icons/back.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UIScenes/DefeatScreen.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.25098 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.54902, 0.415686, 0.239216, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.223529, 0.168627, 0.0941176, 1 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 6
font_data = ExtResource( 1 )

[node name="DefeatScreen" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 5 )

[node name="Overlay" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )

[node name="DefeatScreenContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="DefeatScreenContainer"]
margin_left = 117.0
margin_top = 46.0
margin_right = 203.0
margin_bottom = 133.0
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="DefeatScreenContainer/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 85.0
margin_bottom = 86.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Rows" type="VBoxContainer" parent="DefeatScreenContainer/PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 79.0
margin_bottom = 80.0

[node name="Title" type="Label" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows"]
margin_right = 74.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.560784, 0.0666667, 0.0666667, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = SubResource( 1 )
text = "DEFEAT"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows"]
self_modulate = Color( 0.952941, 0.662745, 0.0392157, 1 )
margin_top = 25.0
margin_right = 74.0
margin_bottom = 29.0

[node name="StageStats" type="HBoxContainer" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows"]
margin_top = 33.0
margin_right = 74.0
margin_bottom = 53.0

[node name="StatName" type="VBoxContainer" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/StageStats"]
margin_right = 48.0
margin_bottom = 20.0

[node name="Time" type="Label" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/StageStats/StatName"]
margin_right = 48.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 4 )
text = "Time:"

[node name="MobsKilled" type="Label" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/StageStats/StatName"]
margin_top = 12.0
margin_right = 48.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "Mobs killed:"

[node name="StatValue" type="VBoxContainer" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/StageStats"]
margin_left = 69.0
margin_right = 74.0
margin_bottom = 20.0
size_flags_horizontal = 10

[node name="Time" type="Label" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/StageStats/StatValue"]
margin_right = 5.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
valign = 1

[node name="MobsKilled" type="Label" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/StageStats/StatValue"]
margin_top = 12.0
margin_right = 5.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
valign = 1

[node name="HSeparator2" type="HSeparator" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows"]
self_modulate = Color( 0.952941, 0.662745, 0.0392157, 1 )
margin_top = 57.0
margin_right = 74.0
margin_bottom = 61.0

[node name="Buttons" type="HBoxContainer" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows"]
margin_top = 65.0
margin_right = 74.0
margin_bottom = 75.0
size_flags_horizontal = 4

[node name="BackButton" type="TextureButton" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/Buttons"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 35.0
margin_bottom = 10.0
rect_min_size = Vector2( 35, 10 )
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/Buttons/BackButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -5.0
margin_right = 5.0
margin_bottom = 10.0
rect_min_size = Vector2( 10, 10 )
size_flags_horizontal = 4
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="RestartButton" type="TextureButton" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/Buttons"]
margin_left = 39.0
margin_right = 74.0
margin_bottom = 10.0
rect_min_size = Vector2( 35, 10 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/Buttons/RestartButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -5.0
margin_right = 5.0
margin_bottom = 10.0
rect_min_size = Vector2( 10, 10 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5
flip_h = true

[connection signal="pressed" from="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/Buttons/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="DefeatScreenContainer/PanelContainer/MarginContainer/Rows/Buttons/RestartButton" to="." method="_on_RestartButton_pressed"]
